--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +10,11 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="img/ice-cream.png">
 </head>
+
 <body>
     <div class="grid">
         <header>
-            <h3>Sorveteria</h3>
+            <h1>Sorveteria</h1>
             <nav>
                 <a href="#">Home</a>
                 <a href="#">Nossos sorvetes</a>
@@ -27,7 +29,41 @@
             </div>
         </header>
 
+        <aside class="sidebar">
+            <nav>
+                <a href="#">Como fazemos nossos produtos</a>
+                <a href="#">Nossos sabores</a>
+                <a href="#">Cobertura quente</a>
+                <a href="#">Granulados</a>
+                <a href="#">Alcoólicos (+18)</a>
+            </nav>
+        </aside>
+
+        <main>
+            <div class="imagem">
+                <img src="img/P2390584-550x413.jpg" alt="">
+                
+            </div>
+            <div class="texto">
+                    <h2>Nossa história</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, quidem vel animi unde dignissimos
+                        consequatur, expedita ducimus ipsum obcaecati in rerum, fugit ex ad aut ea dolor. Recusandae,
+                        praesentium quibusdam?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero officia iusto neque quam perferendis
+                        consequuntur tempora exercitationem eius earum voluptatem quae omnis similique, totam facere quidem
+                        laudantium, maxime alias nemo.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, quidem vel animi unde dignissimos
+                        consequatur, expedita ducimus ipsum obcaecati in rerum, fugit ex ad aut ea dolor. Recusandae,
+                        praesentium quibusdam?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero officia iusto neque quam perferendis
+                        consequuntur tempora exercitationem eius earum voluptatem quae omnis similique, totam facere quidem
+                        laudantium, maxime alias nemo.
+                    </p>
+            </div>
+        </main>
     </div>
-    
+
 </body>
+
 </html>
